@@ -1,6 +1,8 @@
   - Doc fix in Message::Passing::Manual::Cookbook
     https://github.com/suretec/Message-Passing/pull/2
 
+  - Add Crypt::CBC encoder and decoder.
+
   - Add Gzip and Bzip2 encoders and decoders.
 
 0.009
